--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "homepage": "https://johnfull30.github.io/countdown/",
   "description": "",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^7.5.3",
