--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "homepage": "https://johnfull30.github.io/countdown/",
   "description": "",
   "dependencies": {
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/ios": "^7.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
